# project-sherlock

./: .gitignore  README.md  coverage.xml  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml
.github/: analyze_commits.py  valid_git_history.py
.github/workflows/: bump_version.yml  python_tests.yml
diagram/: wip_diagram.drawio
sherlock/: app.py
sherlock/external_utils/: llm_ui.py
sherlock/file_utils/: file_type.py  writer.py
sherlock/scrape_utils/: metadata.py  scraper.py
sherlock/utilities/: file_type.py  llm.py  metadata.py  query_service.py  scraper.py  writer.py
tests/: app_test.py  conftest.py
tests/utilities/: llm_test.py
