[tool.poetry]
name = "sherlock"
version = "0.1.0"
description = "A tool that allows users to scrape and analyze website data using a generative AI chat bot."
authors = ["awhipp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
six = "^1.16.0"
pandas = "^2.1.0"
flask = "^2.3.3"
pydantic = "^2.6.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^7"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.flake8]
max-line-length = 160

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
