[tool.poetry]
name = "sherlock"
version = "0.2.0"
description = "A tool that allows users to scrape and analyze website data using a generative AI chat bot."
authors = ["awhipp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
six = "^1.16.0"
pandas = "^2.1.0"
pydantic = "^2.6.3"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.111.0"
selenium = "^4.20.0"
gpt4all = "^2.6.0"
html2text = "^2024.2.26"
pypdf = "^4.2.0"
docx2txt = "^0.8"
openpyxl = "^3.1.2"
tabulate = "^0.9.0"
xlrd = "^2.0.1"
ollama = "^0.2.0"
chromadb = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^7"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.flake8]
max-line-length = 160

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
